Update front end

--- a/src/main/resources/templates/goatcode.html
+++ b/src/main/resources/templates/goatcode.html
@@ -18,38 +18,80 @@
         <b id = "text">Programista, Wizjoner, Geniusz, Filantrop</b>
     </div>
 
-    <p>Nagrywam filmiki w internecie czasem</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
-    <p>tka</p>
+    <div class = "content" id = "content">
+        <p>Hej hej, nazywam się koziokod i mam 40 wyświetleń na kanale, więc jestem w praktyce celebrytą.</p>
+
+        <!-- FAQ-->
+        <h2>FAQ</h2>
+
+        <h3>Jaki jest cel? Do czego zmierzamy?</h3>
+        <p>
+            Ta strona to dla mnie eksperyment, nie jest ona czymś bardzo użytecznym.
+            Na razie głównym jej zadaniem jest zebranie całej mojej twórczości (której nie ma jakoś dużo) w jedno miejsce.
+        </p>
+
+        <h3>Czy mogę tutaj popisać?</h3>
+        <p>
+            Początkowo miało być tu forum dyskusyjne, ale końcowo zdecydowałem się na użycie discorda (Coming Soon).
+        </p>
+
+        <h3>Jesteś najlepszą osobą na świecie!</h3>
+        <p>Wiele osób mi to mówi.</p>
+
+        <h3>Jakie masz plany na kanał?</h3>
+        <p>
+            Nie mam, robię to, co mi się podoba, głównie skupiam się na procesie twórczym, nie robię niczego stricte
+            pod kanał.
+        </p>
+
+        <h3>
+            Nie uważasz, że robienie takiego FAQ jest narcystyczne,
+            biorąc pod uwagę, że nikogo nie obchodzi twoje istnienie?
+        </h3>
+        <p>
+            Tak właśnie uważam, ale muszę czymś zapełnić stronę, a to jest pierwsze co przyszło mi do głowy.
+        </p>
+
+        <h3>Jakich języków używasz?</h3>
+        <p>
+            W kolejności od najbardziej ulubionego do najmniej: Kotlin, Rust, Java.
+        </p>
+
+        <h3>W czym jest napisana ta strona?</h3>
+        <p>
+            Strona ma napisany backend w Javie, a front end w czystym java scriptcie z użyciem HTMLa/CSSa
+        </p>
+        <p>
+            Jeżeli interesuje cię proces twórczy, zapraszam na mój film o tym
+            <a href = "https://youtube.com">tutaj</a>.
+        </p>
+
+        <h2>NAJNOWSZY FILM</h2>
+        <center><iframe width="560"
+                height="315"
+                src="https://www.youtube.com/embed/mklZxhSM09k"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                style =  "margin: auto;"
+        ></iframe></center>
+    </div>
 
     <div class = "footer">
-        <h4>Wszystkie prawa nie są zastrzeżone, nie stać mnie na prawnika - nic wam nie mogę zrobić.</h4>
+        <table style = "width: 100%;">
+            <tr>
+                <td>
+                    <a href="kontakt">Kontakt</a>
+                </td>
+                <td>
+                    <a href="projekty">Projekty</a>
+                </td>
+                <td>
+                    <a href="filmy">Filmy</a>
+                </td>
+            </tr>
+        </table>
     </div>
 
 </body>
