--- a/src/main/resources/templates/goatcode.html
+++ b/src/main/resources/templates/goatcode.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class = "header" id = "header">
-        <h1 id = "goatcode">GOATCODE</h1>
+        <h1 id = "goatcode"><a href = "/">GOATCODE</a></h1>
         <b id = "text">Programista, Wizjoner, Geniusz, Filantrop</b>
     </div>
 
